WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24863
Reflection drawing is broken with accelerated-compositing layers
https://bugs.webkit.org/show_bug.cgi?id=24863
Summary
Reflection drawing is broken with accelerated-compositing layers
Simon Fraser (smfr)
Reported
2009-03-26 17:38:06 PDT
If an element has style that makes it composited, but also has reflection, then the reflection fails to render.
Attachments
WIP patch
(5.64 KB, patch)
2009-06-22 23:07 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Final patch
(9.39 KB, patch)
2009-06-23 14:20 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-03-26 17:38:28 PDT
<
rdar://problem/6729013
>
Simon Fraser (smfr)
Comment 2
2009-06-22 23:07:56 PDT
Created
attachment 31706
[details]
WIP patch
Simon Fraser (smfr)
Comment 3
2009-06-23 13:31:32 PDT
***
Bug 26652
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 4
2009-06-23 14:20:41 PDT
Created
attachment 31736
[details]
Final patch
Dave Hyatt
Comment 5
2009-06-23 14:23:47 PDT
Comment on
attachment 31736
[details]
Final patch r=me
Simon Fraser (smfr)
Comment 6
2009-06-23 14:25:44 PDT
http://trac.webkit.org/changeset/45005
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug