WebCore/rendering/RenderLayer.h
@@ -442,7 +442,8 @@ private:
     enum PaintLayerFlag {
         PaintLayerHaveTransparency = 1,
         PaintLayerAppliedTransform = 1 << 1,
-        PaintLayerTemporaryClipRects = 1 << 2
+        PaintLayerTemporaryClipRects = 1 << 2,
+        PaintLayerPaintingReflection = 1 << 3
     };
     
     typedef unsigned PaintLayerFlags;
@@ -489,6 +490,7 @@ private:
     void createReflection();
     void updateReflectionStyle();
     bool paintingInsideReflection() const { return m_paintingInsideReflection; }
+    void setPaintingInsideReflection(bool b) { m_paintingInsideReflection = b; }
     
     void parentClipRects(const RenderLayer* rootLayer, ClipRects&, bool temporaryClipRects = false) const;
 
